--- a/index.html
+++ b/index.html
@@ -103,71 +103,49 @@
 			</div>
 		</div>
 	</div>
-	<footer class="footer">
-		<button onclick="prev()">&laquo;</button>
-		<div class="scroller">
-			<ul class="sucursales">
-				<li class="sucursal">
-					<div class="infoSucursal">
-						<p>
-							<span class="nombreDeSucursal">Hurlingham:</span>
-							 Av. Jauretche 1401 Tel. 4665-3879 y 4665-8749
-						</p>
-						<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
-					</div>
-				</li>
-				<li class="sucursal">
-					<div class="infoSucursal">
-						<p>
-							<span class="nombreDeSucursal">Haedo:</span>
-							 Av. Rivadavia 16426 Tel. 4665-3879 y 4665-8749
-						</p>
-						<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
-					</div>
-				</li>
-				<li class="sucursal">
-					<div class="infoSucursal">
-						<p>
-							<span class="nombreDeSucursal">Muñiz:</span>
-							 Av. Perón 450 Tel. 4665-3879 y 4665-8749
-						</p>
-						<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
-					</div>
-				</li>
-			</ul>			
+	<footer class="container">
+
+		<div id="sucursales" class="carousel slide" data-ride="carousel">
+		  <div class="carousel-inner" role="listbox">
+		    <div class="carousel-item active">
+		     	<p>
+					<span class="nombreDeSucursal">Hurlingham:</span>
+					 Av. Jauretche 1401 Tel. 4665-3879 y 4665-8749
+				</p>
+				<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
+		    </div>
+		    <div class="carousel-item">
+		      	<p>
+					<span class="nombreDeSucursal">Haedo:</span>
+					 Av. Rivadavia 16426 Tel. 4665-3879 y 4665-8749
+				</p>
+				<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
+		    </div>
+		    <div class="carousel-item">
+				<p>
+					<span class="nombreDeSucursal">Muñiz:</span>
+					 Av. Perón 450 Tel. 4665-3879 y 4665-8749
+				</p>
+				<p>Abrimos de martes a domingos de 19.15 a 23.00 hs.</p>
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#sucursales" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#sucursales" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
 		</div>
-		<button onclick="next()">&raquo;</button>
+
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var d = document;
-		var wrap = d.querySelector('.footer');
-		var items = d.querySelector('.sucursales');
-		var itemCount = d.querySelectorAll('.sucursal').length;
-		var scroller = d.querySelector('.scroller');
-		var pos = 0;
-		var transform = Modernizr.prefixed('transform');
+	<script src="js/main.js"></script>
 
-		function setTransform() {
-		  items.style[transform] = 'translate3d(' + (-pos * items.offsetWidth) + 'px,0,0)';
-		}
-
-		function prev() {
-		  pos = Math.max(pos - 1, 0);
-		  setTransform();
-		}
-
-		function next() {
-		  pos = Math.min(pos + 1, itemCount - 1);
-		  setTransform();
-		}
-
-		window.addEventListener('resize', setTransform);
-	</script>
 
 </body>
 </html>
