Agrego vista del menu y main_menu.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a class="nav-link active" href="#">INICIO</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">MENÚ</a>
+					<a class="nav-link" href="menu.html">MENÚ</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">SUCURSALES</a>
