Corrijo accordion y agrego Sugerencias

--- a/menu.html
+++ b/menu.html
@@ -41,62 +41,19 @@
 	<div class="container menuContent">
 		
 	<div class="boxMenu">
-	<h2>MENÚ</h2><!-- 
- <div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-        Collapsible Group 1</a>
-      </h4>
-    </div>
-    <div id="collapse1" class="panel-collapse collapse in">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-        Collapsible Group 2</a>
-      </h4>
-    </div>
-    <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-        Collapsible Group 3</a>
-      </h4>
-    </div>
-    <div id="collapse3" class="panel-collapse collapse">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
-    </div>
-  </div>
-</div> -->
+
+	<h2>MENÚ</h2>
 	<div id="accordion">
 
 	  <div class="card">
 	    <div class="card-header" id="headingOne">
 	      <h5 class="mb-0">
-	        <button class="btn btn-link" data-toggle="collapse" data-target="#rubroMaki" aria-expanded="true" aria-controls="rubroMaki">
+	        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#rubroMaki" aria-expanded="false" aria-controls="rubroMaki">
 	          MAKI
 	        </button>
 	      </h5>
 	    </div>
-	    <div id="rubroMaki" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+	    <div id="rubroMaki" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
 	      <div class="card-body">
 	        <ul class="rubro">
 	        	<li class="producto">
@@ -147,12 +104,12 @@
 	  <div class="card">
 	    <div class="card-header" id="headingTwo">
 	      <h5 class="mb-0">
-	        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#rubroGeishas" aria-expanded="false" aria-controls="rubroGeishas">
+	        <button class="btn btn-link" data-toggle="collapse" data-target="#rubroGeishas" aria-expanded="true" aria-controls="rubroGeishas">
 	          GEISHAS
 	        </button>
 	      </h5>
 	    </div>
-	    <div id="rubroGeishas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+	    <div id="rubroGeishas" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
 	      <div class="card-body">
 	        <ul class="rubro">
 	        	<li class="producto">
@@ -480,17 +437,44 @@
 	    </div>
 	  </div>
 
-     </div>	<!-- FIN ACCORDION-- >	
-	</div> 	<!-- FIN MENU-- >	
-		<aside>
-			<div class="boxPedido">
-				<h2>MI PEDIDO</h2>
+     </div>		
+	</div> 
 
+	<aside>
+		<div class="boxPedido">
+			<h2>MI PEDIDO</h2>
+
+		</div>
+		<div class="boxSugerencias">
+			<h2>SUGERENCIAS</h2>
+			<div class="card-deck">
+				<div class="card">
+				  <img class="card-img-top" src="img/imagen1.jpg" alt="Maki">
+				  <div class="card-body">
+				  	<h5 class="card-title">Maki</h5>
+				  </div>
+				</div>
+				<div class="card">
+				  <img class="card-img-top" src="img/imagen2.jpg" alt="Maki">
+				  <div class="card-body">
+				  	<h5 class="card-title">Hot Smoked Tempura Maki</h5>
+				  </div>
+				</div>
+				<div class="card">
+				  <img class="card-img-top" src="img/imagen3.jpg" alt="Maki">
+				  <div class="card-body">
+				  	<h5 class="card-title">Geishas</h5>
+				  </div>
+				</div>
+				<div class="card">
+				  <img class="card-img-top" src="img/imagen4.jpg" alt="Maki">
+				  <div class="card-body">
+				  	<h5 class="card-title">Niguiri de salmón</h5>
+				  </div>
+				</div>
 			</div>
-			<div class="boxSugerencias">
-				<h2>SUGERENCIAS</h2>
-			</div>	
-		</aside>
+		</div>	
+	</aside>
 		
 	</div>
 
@@ -498,18 +482,13 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!--	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-<!--	<script src="js/bootstrap.min.js"></script>
+
  	<script type="text/javascript">
 		$(document).ready(function(){
 			$('.collapse').collapse()
 
 		});
-	</script> -->
+	</script>
 
 
 </body>
