Finalizo el sector de pedidos del menu

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="description" content="Trabajo Practico 1 de Programacion Web 2"/>
 
 	<title>TP1 - Ishidan</title>
+	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
@@ -49,7 +49,7 @@
 				<div class="pregunta">
 					<span class="img_pregunta"></span>
 					<p>
-						Si aún no se registró haga click <a href="">aquí</a>
+						Si aún no se registró haga click <a href="menu.html">aquí</a>
 						para iniciar su pedido.
 					</p>
 				</div>				
@@ -141,9 +141,9 @@
 
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.3.1.slim..min.js"></script>
+	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
 	<script src="js/main.js"></script>
 
 
